# tangerine

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  build.rs  windows_env_export
client/src/: command.rs  crypto.rs  dev.rs  lib.rs  main.rs  tangerine.rs
client/tests/: integration_test.rs
commands/: 333e9c03-d307-4a5e-9042-f97e36f0a77a  POWERSHELL_TANGERINE  b5005d10-9117-4f7b-977d-1d8d02130a3d  b5005d10-9117-4f7b-977d-1d8d02130a3d.tangerine  ba69406f-596f-40de-af2a-5003dea67e1e  ba69406f-596f-40de-af2a-5003dea67e1e.tangerine
img_exe/: Cargo.toml
img_exe/src/: main.rs
tangerine_img/: Cargo.toml
tangerine_img/src/: main.rs
test_images/: .dockerignore  Cargo.toml  build.rs
test_images/src/: constants.rs
test_images/src/dockerfiles/: no_expose_port.dockerfile  simple_tangerine_client.dockerfile  simple_tangerine_server.dockerfile  simple_web_server.dockerfile
