[package]
name = "tangerine_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.1", features = ["std"] }
reqwest = { version = "0.11.15" }
tokio = { version = "1.26.0", features = ["full"] }
bytes = { version = "1" }

[build-dependencies]
uuid = { version = "1.3.0", features = ["v4"]}
