[package]
name = "test_images"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
axum = { version = "0.5.1", features = [ "http2" ] }
tokio = { version = "1.17.0", features = [ "full" ] }

[build-dependencies]
anyhow = "1.0.56"